# sportsjobs_postgres

./: .gitignore  README.md  cron_log.txt  main.py  pyproject.toml
database/: alerts_create_table.py  alerts_migrate_table.py  blog_create_table.py  blog_migrate_table.py  connection.py  jobs_create_slug.py  jobs_create_table.py  jobs_create_trigger.py  jobs_migrate_table.py  newsletter_signups_create_table.py  script_backup.sh  upload_images_to_r2.py  users_create_table.py  users_migrate_airtable.py
database/views/: latests_jobs_view.py  newsletter_view.py
database_backups/: sportsjobs_20241202_011844.sql  sportsjobs_20250221_150001.sql  sportsjobs_20250222_150001.sql  sportsjobs_20250224_150001.sql  sportsjobs_20250225_150001.sql  sportsjobs_20250226_150001.sql  sportsjobs_20250227_150001.sql  sportsjobs_20250228_150001.sql  sportsjobs_20250301_150001.sql  sportsjobs_20250302_150001.sql
endpoints/: alerts.py  blog.py  companies.py  health.py  jobs.py  newsletter.py  users.py
models/: schemas.py
